
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
     >

<!-- 第一列，表示一周中的某一天 -->
<TableRow
    android:layout_weight="2"
    >

    <TextView
        android:id="@+id/day_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:text="@string/monday"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_gravity="center"
         />

</TableRow>
<!-- 八点到九点 -->

<TableRow
    android:layout_weight="1"
    >

    <TextView
        android:id="@+id/eight"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="1"
        android:text="@string/eight"
        android:textSize="20sp" />
	
     <TextView
        android:id="@+id/eight_course"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:singleLine="true"
        android:maxWidth="50dp"
        android:layout_weight="2"
        android:textSize="20sp"
        android:gravity="center"
        
        android:layout_gravity="center"
         />
     
     

</TableRow>

<TableRow
    android:layout_weight="1"
    >

    <TextView
        android:id="@+id/nine"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/nine"
        android:textSize="20sp"
        android:layout_weight="1"
         />

    <TextView
        android:id="@+id/nine_course"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:singleLine="true"
        android:textSize="20sp"
        android:maxWidth="50dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_weight="2"
         />
</TableRow>

<TableRow
    android:layout_weight="1"
    >

    <TextView
        android:id="@+id/ten"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/ten"
        android:textSize="20sp"
        android:layout_weight="1"
         />

    <TextView
        android:id="@+id/ten_course"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:ellipsize="end"
        android:singleLine="true"
        android:maxWidth="50dp"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_weight="2"
         />
</TableRow>

<TableRow
    android:layout_weight="1"
    >

    <TextView
        android:id="@+id/eleven"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/eleven"
        android:textSize="20sp"
        android:layout_weight="1"
         />

    <TextView
        android:id="@+id/eleven_course"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:singleLine="true"
        android:maxWidth="50dp"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_weight="2"
         />
</TableRow>

<TableRow
    android:layout_weight="1"
    >

    <TextView
        android:id="@+id/twelve"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/twelve"
        android:textSize="20sp"
        android:layout_weight="1"
         />

    <TextView
        android:id="@+id/twelve_course"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:singleLine="true"
        android:maxWidth="50dp"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_weight="2"
         />
</TableRow>

<TableRow
    android:layout_weight="1"
    >

    <TextView
        android:id="@+id/thirteen"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/thirteen"
        android:textSize="20sp"
        android:layout_weight="1"
         />

    <TextView
        android:id="@+id/thirteen_course"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:singleLine="true"
        android:maxWidth="50dp"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_weight="2"
         />
</TableRow>

<TableRow
    android:layout_weight="1"
    >

    <TextView
        android:id="@+id/fourteen"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/fourteen"
        android:textSize="20sp"
        android:layout_weight="1"
         />

    <TextView
        android:id="@+id/fourteen_course"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:singleLine="true"
        android:maxWidth="50dp"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_weight="2"
         />
</TableRow>

<TableRow
    android:layout_weight="1"
    >

    <TextView
        android:id="@+id/fifteen"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/fifteen"
        android:textSize="20sp"
        android:layout_weight="1"
         />

    <TextView
        android:id="@+id/fifteen_course"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:singleLine="true"
        android:maxWidth="50dp"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_weight="2"
         />
</TableRow>

<TableRow
    android:layout_weight="1"
    >

    <TextView
        android:id="@+id/sixteen"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/sixteen"
        android:textSize="20sp"
        android:layout_weight="1"
         />

    <TextView
        android:id="@+id/sixteen_course"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:singleLine="true"
        android:maxWidth="50dp"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_weight="2"
         />
</TableRow>

<TableRow
    android:layout_weight="1"
    >

    <TextView
        android:id="@+id/seventeen"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/seventeen"
        android:textSize="20sp"
        android:layout_weight="1"
         />

    <TextView
        android:id="@+id/seventeen_course"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:singleLine="true"
        android:maxWidth="50dp"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_weight="2"
         />
</TableRow>

<TableRow
    android:layout_weight="1"
    >

    <TextView
        android:id="@+id/eighteen"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/eighteen"
        android:textSize="20sp"
        android:layout_weight="1"
         />

    <TextView
        android:id="@+id/eighteen_course"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:singleLine="true"
        android:maxWidth="50dp"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="2"
         />
</TableRow>

<TableRow
    android:layout_weight="1"
    >

    <TextView
        android:id="@+id/nineteen"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/nineteen"
        android:textSize="20sp"
        android:layout_weight="1"
         />

    <TextView
        android:id="@+id/nineteen_course"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:textSize="20sp"
        android:singleLine="true"
        android:maxWidth="50dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_weight="2"
         />
</TableRow>



</TableLayout>


