<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/setting_layout"
    android:background="@drawable/background"
     >

    <TableRow 
        android:layout_weight="3"
        android:gravity="center"
        android:layout_gravity="center"
        >
		 
        <ZoomControls
            android:id="@+id/zoomControls1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            
            />
		
    </TableRow>
    
    <TableRow 
        android:layout_weight="1"
        android:gravity="center"
        android:layout_gravity="center"
        >
    <TextView
        android:id="@+id/synchronize_button"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/synchronize_text"
        android:textStyle="bold"
        />
    </TableRow>
    
    <TableRow 
        android:layout_weight="1"
        android:gravity="center"
        android:layout_gravity="center"
        >
    <TextView
        android:id="@+id/set_text_size_button"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/set_size_text"
        android:textStyle="bold"
        />
    </TableRow>
   
    <TableRow 
        android:layout_weight="1"
        android:gravity="center"
        android:layout_gravity="center"
        >
    <TextView
        android:id="@+id/set_bg_button"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/set_bg_text"
        android:textStyle="bold"
        />

    <ProgressBar
        android:id="@+id/goto_pb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
         />

    </TableRow>
    <!--
    <TableRow 
        android:layout_weight="1"
        android:gravity="center"
        android:layout_gravity="center"
        >
    <TextView
        android:id="@+id/changeBG_button"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/changeBG"
        android:textStyle="bold"
        
        />
    </TableRow>
    -->  
    <TableRow 
        android:layout_weight="1"
        android:gravity="center"
        android:layout_gravity="center"
        >
    <TextView
        android:id="@+id/logoff_button"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/logoff_text"
        android:textStyle="bold"
        />
    </TableRow>
    
    <TableRow 
        android:layout_weight="3"
        ></TableRow>

</TableLayout>
