<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
     >

    <TableRow 
        android:layout_weight="4"
        >
        
        
    </TableRow>
    
    <TableRow 
        android:layout_weight="1"
        >
        
        <TextView
            android:id="@+id/name_view" 
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/name_view_text"
            android:gravity="center"
            android:layout_gravity="center"
            />
        <EditText 
            android:id="@+id/user_name"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="4"
           	android:gravity="center"
            android:layout_gravity="center"
            android:background="@drawable/text"
            android:maxWidth="30dp"
            android:maxLines="1"
            android:hint="@string/hint"
            />
        
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"
            
            />
        
    </TableRow>


    
    <TableRow 
        android:layout_weight="1"
        >
        
        <TextView
            android:id="@+id/pass_view" 
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/pass_view_text"
            android:gravity="center"
            android:layout_gravity="center"
            />
        <EditText
            android:id="@+id/password" 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:password="true"
            android:layout_weight="4"
            android:background="@drawable/text"
            android:gravity="center"
            android:layout_gravity="center"
            android:singleLine="true"
            android:maxWidth="30dp"
            />
        
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"
            />
    </TableRow>

    

    
    <TableRow 
        android:layout_weight="2"
        android:gravity="center"
        android:layout_gravity="center"
        >
        <Button
            android:id="@+id/loginYes" 
            android:background="@drawable/yes"
            />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
             />

        <Button
            android:id="@+id/loginCancel" 
            android:background="@drawable/no"
            />
    </TableRow>
    
    <TableRow 
        android:layout_weight="3"
        >
    </TableRow>
    
</TableLayout>
